--- a/mopidy/.gitignore
+++ b/mopidy/.gitignore
@@ -11,6 +11,8 @@ Docker/host_volumes/cache/*
 Docker/host_volumes/config/podcast/*
 !Docker/host_volumes/config/mopidy/podcast/.keep
 
+Docker/host_volumes/config/mopidy/mopidy.conf
+Docker/host_volumes/config/mopidy/podcast/Podcasts.opml
 
 
 Docker/host_volumes/Music/*
@@ -18,32 +20,31 @@ Docker/host_volumes/Music/*
 
 
 
+#Docker/host_volumes/data/mopidy/local/library.db
 
-data/mopidy/local/library.db
+#Docker/host_volumes/data/mopidy/m3u/*
+#!Docker/host_volumes/data/mopidy/m3u/.keep
 
-Docker/host_volumes/data/mopidy/m3u/*
-!Docker/host_volumes/data/mopidy/m3u/.keep
+
+
+
 
 Docker/host_volumes/data/mopidy/core/*
-!Docker/host_volumes/data/mopidy/core/.keep
-
-Docker/host_volumes/data/mopidy/iris/*
-!Docker/host_volumes/data/mopidy/iris/.keep
-
-Docker/host_volumes/data/mopidy/spotify/*
-!Docker/host_volumes/data/mopidy/spotify/.keep
-
-Docker/host_volumes/transport/*
-!Docker/host_volumes/transport/.keep
-
-
 Docker/host_volumes/data/mopidy/http/*
-Docker/host_volumes/data/mopidy/local//
+Docker/host_volumes/data/mopidy/iris/*
+Docker/host_volumes/data/mopidy/local/*
 Docker/host_volumes/data/mopidy/m3u/*
 Docker/host_volumes/data/mopidy/media/*
+Docker/host_volumes/data/mopidy/spotify/*
 
+!Docker/host_volumes/data/mopidy/core/.keep
 !Docker/host_volumes/data/mopidy/http/.keep
+!Docker/host_volumes/data/mopidy/iris/.keep
 !Docker/host_volumes/data/mopidy/local/.keep
 !Docker/host_volumes/data/mopidy/m3u/.keep
 !Docker/host_volumes/data/mopidy/media/.keep
+!Docker/host_volumes/data/mopidy/spotify/.keep
 
+
+Docker/host_volumes/transport/*
+!Docker/host_volumes/transport/.keep
